  raise an IndexError
- Modified the code of the JavaScript method from functions.js, showElement, to
  be more generic (this fixes problems notably in CPSSchemas).
- Added the script isInWorkspacesTree and use it in the main_template so that
  it returns a positive when an object is in a container that is not a Workspace
  itself but which is located below the root of the workspaces. This is for
  example useful for the case of CPSWiki where the isInWorkspace script was
  returning False.
- fix: setup portlets only on installation not on updates
- verifyPortlets() now uses a tuples of dictionaries for 'portlets'.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Reverted DocRenderBox.getContent() naming to DocRenderBox.getContents() to
  be consistent with other boxes and not be confused with proxy.getContent().
- manageCPSLanguage method is now in CPSDefault.utils
- Factorized code from CPSDefault/skins/cps_default/computeId to the method
  CPSUtil.id.generateId.
- Boxes related are moved to CPSBoxes
- new index fieldIndex Language, so you can query:
    query['Language'] = ['fr', 'it']
- new filter set: default_languages that matches all proxies in their default 
  languages:
    query['cps_filter_sets'] = {'query': ('searchable', 'default_languages'),
                                'operator': 'and'}
  or using skin/cps_default/search.py:
    brains = portal.search(query={'path': '/cps/workspaces/folder1'},
                           default_languages=1)
- Made portal creation form more robust.
- Added the "Contributor" and "Reader" local roles. Those are currently used by
  CPSWiki. Those roles are not specific to workspaces or sections and they
  basically are what WorkspaceMember, WorkspaceReader, SectionReader should have
  been in the first place.
- Default Tree cache configuration takes care of BTree proxies as well
- Moved some code from CPSMembershipTool to CPSDefault.MembershipTool. This code
  was too high-level for CPSCore.