@@ -26,6 +26,11 @@ Bug fixes:
   returning False.
 - fix: setup portlets only on installation not on updates
 - verifyPortlets() now uses a tuples of dictionaries for 'portlets'.
+- Made the resetPassword functionality not send the password through email
+  anymore but rather display it on the login_form web page (that should be
+  protected through HTTPS). This is more secure since the password does not
+  transmit over SMTP and this is more straightforward for the user who does not
+  have to wait for yet another email message.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Reverted DocRenderBox.getContent() naming to DocRenderBox.getContents() to
